--- a/XFInputAlertDialogService/XFInputAlertDialogService.Android/packages.config
+++ b/XFInputAlertDialogService/XFInputAlertDialogService.Android/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommonServiceLocator" version="1.3" targetFramework="monoandroid71" />
+  <package id="Prism.Core" version="6.3.0" targetFramework="monoandroid71" />
+  <package id="Prism.Forms" version="6.3.0" targetFramework="monoandroid71" />
+  <package id="Prism.Unity.Forms" version="6.3.0" targetFramework="monoandroid71" />
+  <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="monoandroid71" />
+  <package id="Unity" version="4.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid71" />
