--- a/XFInputAlertDialogService/XFInputAlertDialogService.UWP/project.json
+++ b/XFInputAlertDialogService/XFInputAlertDialogService.UWP/project.json
@@ -1,7 +1,9 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
-    "Xamarin.Forms": "2.3.4.224"
+    "Prism.Unity.Forms": "6.3.0",
+    "Rg.Plugins.Popup": "1.0.4",
+    "Xamarin.Forms": "2.3.4.247"
   },
   "frameworks": {
     "uap10.0": {}
